# fissure

./: .gitignore  DOCUMENTATION.md  README.md
fissure_client/: Cargo.toml
fissure_client/src/: helper.rs  main.rs
fissure_client/src/bee_processor/: bee_decoder.rs  bee_encoder.rs  mod.rs
fissure_client/src/models/: client_meta.rs  mod.rs  torrent_jobs.rs  torrent_meta.rs
fissure_client/src/orchestration/: basic_orechestration.rs  handshake_orechestration.rs  job_orchestrator.rs  mod.rs  torrent_refresh.rs
fissure_client/src/protcols/: tracker.rs
fissure_client/src/protocols/: mod.rs  peer_handshake.rs  peer_protocol_state_machine.rs  tracker.rs
