[package]
name = "fissure_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bytes = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_bencoded = "0.3.1"
sha1 = "0.10.5"
rand = "0.8.5"
reqwest = "0.11.18"
serde_qs = "0.12.0"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
