[package]
name = "fissure_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bytes = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_bencoded = "0.3.1"
sha1 = "0.10.5"
rand = "0.8.5"
reqwest = "0.11.18"
serde_qs = "0.12.0"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
base64ct = { version=  "1.6.0", features = ['alloc'] }
hex = "0.4"
ascii_converter = "0.3.0"
serde_urlencoded = "0.7.1"
encoding_rs = "0.8.32"
serde_derive = "1.0.183"
url = "2.4.0"
urlencoding = "2.1.3"
byteorder = "1.4.3"
